--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div id="loader"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
